# mafw-gst-eq-renderer

./: AUTHORS  Makefile.am  NEWS  README  THANKS  TODO  configure.ac  constants.h.in
data/: Soft Rock
debian/: changelog  control  copyright  mafw-gst-eq-renderer.dirs  mafw-gst-eq-renderer.install.in  mafw-gst-eq-renderer.mafw.xsession  mafw-gst-eq-renderer.postinst  mafw-gst-eq-renderer.postinst.in  mafw-gst-eq-renderer.prerm  mafw-gst-eq-renderer.xsession  rules
equalizer/: Makefile.am  constants.h.in  mafw-equalizer.c  mafw-equalizer.desktop
libmafw-gst-renderer/: Makefile.am  constants.h.in  mafw-gst-renderer-state-paused.c  mafw-gst-renderer-state-transitioning.c  mafw-gst-renderer-worker-volume.c  mafw-gst-renderer-worker.c  mafw-gst-renderer-worker.h  mafw-gst-renderer.c  mafw-gst-renderer.h
presets/: Flat  Full Bass and Treble  Makefile.am
